clients/atlas-tui/tests/snapshots/golden_settings__rights__a_rights_file_the_owner_could_not_read_renders_at_120x36.snap
---
source: tests/golden_settings.rs
assertion_line: 3439
expression: "client.frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ DESK                               ▌ NEWS                                  │▌ PULSE                          "
" 2 DESK │ mode         SYNTHETIC               nothing has said what this desk reads  │ desk stress  …                  "
" 3 MKTS │ data         synthetic                                                      │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │ book         simulated                                                      │ drawdown 0.0%  tier NONE        "
" 5 RSCH │ lane         offline · synthetic                                            │ gross 100.0%                    "
" 6 PRED │ alpaca login no ALPACA_API_KEY_ID                                           │                                 "
" 7 WORK │in the environment or .env                                                   │▌ BREADTH                        "
" 8 AUDIT│                                                                             │ ███████████████████████████████ "
"▌9 SETT │                                                                             │ adv 1 / dec 4                   "
" 0 VIS  │ a login · t test · m switch lane ── ────────────────────────────────────────│                                 "
"        │▌ AUTHORITY                            ▌ SYSTEM                              │▌ MOVERS                         "
"        │ nothing has said what may book itself  desk         paper                   │ ▲ best  XLF    +1.24%           "
"        │                                        provenance   synthetic · 0 d         │ ▼ worst XLK    -2.08%           "
"        │                                        claude       available               │                                 "
"        │                                        mcp          qlab-operator           │▌ REGIME                         "
"        │──────────────────────────────────────  proxy        available               │ … waiting for the regime panel  "
"        │▌ METHOD                                workforce    available               │                                 "
"        │ nothing has said how this desk solves  authority    propose_only            │                                 "
"        │                                       ──────────────────────────────────────│                                 "
"        │                                       ▌ MODELS                              │                                 "
"        │                                        probed       12s ago                 │                                 "
"        │                                        reasoner     ollama · qwen2.5:7b     │                                 "
"        │                                        judgment     on                      │▌ ATLAS READ                     "
"        │                                        workforce    claude · tiers decide   │ state      STRESS               "
"        │──────────────────────────────────────  the owner answered 500:              │ agreement  ALIGNED              "
"        │▌ POLICY                               /state/atlas_rights.json is not       │ conviction 84.0%                "
"        │ policy       hrp · hrp · hrp · hrp    readable as JSON (Expecting value:    │ news       alpaca               "
"        │ long only    yes                      line 1 column 1); delete it to restore│─────────────────────────────────"
"        │ budget       100.0%                   the defaults                          │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ per asset    0.0% – 40.0%             ──────────────────────────────────────│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────────── ▌ UNIVERSE                            │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │▌ THEME                                 watching     7 symbols               │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ palette      obsidian · truecolor      ACWI SPY QQQ XLK XLF BNDW DUST       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────────── ──────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                   ● SSE  ● OWNER  SYNTHETIC  propose·auto  OPERATOR "
