clients/atlas-tui/tests/snapshots/golden_settings__rights__the_focused_card_renders_its_rights_at_120x36.snap
---
source: tests/golden_settings.rs
assertion_line: 3294
expression: "client.frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ DESK                               ▌ NEWS                                  │▌ PULSE                          "
" 2 DESK │ mode         SYNTHETIC               nothing has said what this desk reads  │ desk stress  …                  "
" 3 MKTS │ data         synthetic                                                      │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │ book         simulated                                                      │ drawdown 0.0%  tier NONE        "
" 5 RSCH │ lane         offline · synthetic                                            │ gross 100.0%                    "
" 6 PRED │ alpaca login no ALPACA_API_KEY_ID                                           │                                 "
" 7 WORK │in the environment or .env                                                   │▌ BREADTH                        "
" 8 AUDIT│                                                                             │ ███████████████████████████████ "
"▌9 SETT │                                                                             │ adv 1 / dec 4                   "
" 0 VIS  │──────────────────────────────────── ────────────────────────────────────────│                                 "
"        │▌ METHOD                               ▌ SYSTEM                              │▌ MOVERS                         "
"        │ nothing has said how this desk solves  desk         paper                   │ ▲ best  XLF    +1.24%           "
"        │                                        provenance   synthetic · 0 d         │ ▼ worst XLK    -2.08%           "
"        │                                        claude       available               │                                 "
"        │                                        mcp          qlab-operator           │▌ REGIME                         "
"        │                                        proxy        available               │ … waiting for the regime panel  "
"        │                                        workforce    available               │                                 "
"        │                                        authority    propose_only            │                                 "
"        │────────────────────────────────────── ──────────────────────────────────────│                                 "
"        │▌ POLICY                               ▌ MODELS                              │                                 "
"        │ policy       hrp                       probed       12s ago                 │                                 "
"        │ method       Hierarchical risk parity  reasoner     ollama · qwen2.5:7b     │                                 "
"        │ algorithm    hrp                       judgment     on                      │▌ ATLAS READ                     "
"        │ objective    hrp                       workforce    claude · tiers decide   │ state      STRESS               "
"        │ solver       hrp                      ▸web          on · chat, /cli tools   │ agreement  ALIGNED              "
"        │ long only    yes                       workflows    off · refused for chat  │ conviction 84.0%                "
"        │ budget       100.0%                    build        on · the /build key     │ news       alpaca               "
"        │ per asset    0.0% – 40.0%              nothing here binds a non-chat caller │─────────────────────────────────"
"        │──────────────────────────────────────  chat: ollama · /cli: claude's verb   │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ Current evidence favors the robust     m model · ↑↓ space grants a right ───│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │HRP benchmark out of sample; MVSK      ▌ UNIVERSE                            │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │▌ THEME                                 watching     7 symbols               │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ palette      obsidian · truecolor      ACWI SPY QQQ XLK XLF BNDW DUST       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────────── ──────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                   ● SSE  ● OWNER  SYNTHETIC  propose·auto  OPERATOR "
